fix background on mobile

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -179,6 +179,9 @@ a:hover {
   .mt {
     margin-top: 15px;
   }
+  body.homepage {
+    background: white;
+  }
 }
 
 
